--- a/venuebooking/src/main/resources/application.yml
+++ b/venuebooking/src/main/resources/application.yml
@@ -5,9 +5,13 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/venue_booking?useSSL=false&serverTimezone=UTC
     username: root
-    password: Lingyi@2025
+    password: Linghao@2025
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
